# gptcl

./: Cargo.toml  LICENSE-MIT  README.md
examples/: Cargo.toml
examples/examples/: 01.rs  02.rs  deepseek.rs  function_call.rs  json_schema.rs  schemars.rs
gpt-model/: Cargo.toml
gpt-model/src/: lib.rs
gptcl/: Cargo.toml
gptcl-hyper/: Cargo.toml
gptcl-hyper/src/: lib.rs
gptcl/src/: gpt_client.rs  http_client.rs  lib.rs
