[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
gptcl = { path = "../gptcl", features = ["schemars"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

gptcl-hyper = { path = "../gptcl-hyper" }
tokio = { version = "1", features = ["full"] }

dotenv = "0"
